--- a/model_prediksi.ipynb
+++ b/model_prediksi.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 95,
       "metadata": {
         "id": "uzeJEOzPlLeB"
       },
@@ -28,12 +28,28 @@
         "            'carbon_kulkas_non_inverter': 0.06600\n",
         "        }\n",
         "\n",
-        "    def electric(self, kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power, others_power_total):\n",
-        "        power = (kulkas_num * kulkas_consume_hour * kulkas_power) + (ac_num * ac_consume_hour * ac_power) + (lamp_num * lamp_consume_hour * lamp_power) + others_power_total\n",
-        "        return power / 1000\n",
+        "    def electric(self, daya_listrik,kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power):\n",
+        "        power = (kulkas_num * kulkas_consume_hour * kulkas_power) + (ac_num * ac_consume_hour * ac_power) + (lamp_num * lamp_consume_hour * lamp_power)\n",
+        "        return (power*30) / 1000\n",
         "\n",
-        "    def calculate_carbon(self, kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power,others_power_total):\n",
-        "        electric_carbon = self.electric(kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power,others_power_total) * 0.0094\n",
+        "    def price(self, daya_listrik,kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power):\n",
+        "        power_kwh = self.electric(daya_listrik, kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power)\n",
+        "\n",
+        "        if (daya_listrik == 450):\n",
+        "            power_kwh *= 415\n",
+        "        elif (daya_listrik == 900):\n",
+        "            power_kwh *= 1352\n",
+        "        elif (daya_listrik == 1300):\n",
+        "            power_kwh *= 1444\n",
+        "        elif (daya_listrik == 2200):\n",
+        "            power_kwh *= 1444\n",
+        "        else:\n",
+        "            power_kwh *= 1699\n",
+        "        \n",
+        "        return power_kwh\n",
+        "\n",
+        "    def calculate_carbon(self, daya_listrik, kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power):\n",
+        "        electric_carbon = self.electric(daya_listrik, kulkas_inverter, kulkas_num, kulkas_consume_hour, kulkas_power, ac_inverter, ac_num, ac_consume_hour, ac_power, lamp_type, lamp_num, lamp_consume_hour, lamp_power) * 0.0094\n",
         "\n",
         "        lamp_carbon = self.params[f'carbon_{lamp_type}'] * lamp_consume_hour * lamp_num\n",
         "\n",
@@ -49,51 +65,42 @@
         "\n",
         "        carbon = electric_carbon + lamp_carbon + ac_carbon + kulkas_carbon\n",
         "        carbon *= 1000\n",
-        "        return carbon / 12\n",
+        "        rounded_carbon_percentage = round((carbon / 12), 2)\n",
+        "        return rounded_carbon_percentage\n",
         "    \n",
-        "    \n",
-        "    def predict(self, data):\n",
+        "    def predict_co2(self, data):\n",
         "        return self.calculate_carbon(**data)\n",
-        "\n",
-        "    def kwh(self, data):\n",
-        "        return self.electric(**data)"
+        "    def predict_kwh(self, data):\n",
+        "        return self.electric(**data)\n",
+        "    def predict_price(self, data):\n",
+        "        return self.price(**data)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "3C3pf-ONlPib"
-      },
-      "outputs": [],
+      "execution_count": 93,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['ModelPrediksi.joblib']"
+            ]
+          },
+          "execution_count": 93,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import joblib\n",
-        "\n",
-        "import joblib\n",
         "model = CarbonFootprintPredictor()\n",
-        "joblib.dump(model, \"carbon.joblib\")\n",
-        "\n",
-        "model = CarbonFootprintPredictor()\n",
-        "data = {\n",
-        "    \"kulkas_inverter\": \"belum\",\n",
-        "    \"kulkas_num\": 19,\n",
-        "    \"kulkas_consume_hour\": 24,\n",
-        "    \"kulkas_power\": 1,\n",
-        "    \"ac_inverter\": \"belum\",\n",
-        "    \"ac_num\": 20,\n",
-        "    \"ac_consume_hour\": 1,\n",
-        "    \"ac_power\":1,\n",
-        "    \"lamp_type\": \"neon\",\n",
-        "    \"lamp_num\": 39,\n",
-        "    \"lamp_consume_hour\": 10,\n",
-        "    \"lamp_power\": 1,\n",
-        "    \"others_power_total\": 100\n",
-        "}"
+        "joblib.dump(model, \"ModelPrediksi.joblib\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,18 +113,18 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Estimated monthly carbon footprint: 454.02 kg CO2 equivalent\n"
+            "Estimated monthly carbon footprint: 464.02 kg CO2 equivalent\n"
           ]
         }
       ],
       "source": [
-        "carbon_footprint = model.predict(data)\n",
-        "print(f\"Estimated monthly carbon footprint: {carbon_footprint:.2f} kg CO2 equivalent\")"
+        "cf = model.predict_co2(data.iloc[0])\n",
+        "print(f\"Estimated monthly carbon footprint: {cf} kg CO2 equivalent\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,13 +137,31 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Estimated monthly kwh: 0.97 kwh\n"
+            "Estimated monthly kwh: 24.84 kwh\n"
           ]
         }
       ],
       "source": [
-        "carbon_footprint = model.kwh(data)\n",
-        "print(f\"Estimated monthly kwh: {carbon_footprint:.2f} kwh\")"
+        "kwh = model.predict_kwh(data.iloc[0])\n",
+        "print(f\"Estimated monthly kwh: {kwh} kwh\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Estimated monthly price: 10308.6\n"
+          ]
+        }
+      ],
+      "source": [
+        "prc = model.predict_price(data.iloc[0])\n",
+        "print(f\"Estimated monthly price: {prc}\")"
       ]
     }
   ],
